--- a/public/ex1/search.html
+++ b/public/ex1/search.html
@@ -6,12 +6,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
    
         <!-- Add Axios Library -->
-
+          <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     </head>
     <body>
         <div class="container-fluid">
             <div class="row">
-                Name: <input type="text" id="nameInput" > <!-- add event -->
+                Name: <input type="text" id="nameInput" onkeyup="showHint()" > <!-- add event -->
             </div>
             <div class="row">
                 Suggestions:
@@ -20,8 +20,19 @@
         </div>
 
         <script>
-            // add event handler code here
-
+          function showHint(){
+            // initiate 
+            axios.get("/suggest", {
+              params: {
+                "query": document.getE1ementId("nameInput").value
+              }
+            }).then(response => {
+              document.getElementById("suggestions").innerText=response.data;
+            }).catch(error=>{
+              console.log(error);
+            })
+          }
+            
         </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
