--- a/public/ex2/info.html
+++ b/public/ex2/info.html
@@ -36,6 +36,7 @@
                     "limit": limitval
                 }
             });
+            generateTable(response.data);
         } catch (error){
             console.log(error);
         }
